This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Version 324     ???

--Arrow to biome expert lasts 3 minutes (was 1 minute).




Server Fixes

--Max baby/adult and baby/mom ratio, which trigger force Eve spawns, are now
  live server settings.  Trying max baby/mom of 2 (was 3) to reduce baby
  overload after server restart.

--Fixed drop-in-bad-biome trick with vehicles.  Fixes #694

--Added support for transitions that end with a floor in hand, meaning that
  floor is put UNDER target object.  This allows a snow floor to be installed
  under an ice hole, for example, without making a special ice-hole-floor
  object, in turn making such an ice hole work for all families (because it
  now has a floor, protecting them from the arctic).

--Reduced Eve placement grid jump size to 50 (was 200), because only 1/4 Eves
  placed is actually surviving, and we've been walking 1000 to the west every
  day.  Now we expect to walk 250 to the west every day.

--Chasing (and fleeing) animals now react to nearby players as far as 10 away
  (was 7).





Version 320     2020-March-28

--Finally figured out a way to make deadly moving objects (like bears) attack
  in passing, when they cross your position while you're standing on a
  non-blocking object.  Server checks their rounded intermediary position, when
  checking whether you're standing on a deadly object, if you're standing on a
  non-empty tile.  Animal turns into attack state immediately, mid-move, and
  client has been fixed to allow moving objects to transition in-motion
  (before, they would snap to their destination instantly if a transition
  happened in-motion).  This will also fix a few other snap-to-destination
  glitches.

--Whoops... switch to STARVING slip was not working for elderly people who were
  listinging to their final music (final music blocks starving chime, but was
  also blocking slip change).
